# URL-Refiner

./: README.md  pyproject.toml
tests/: test_core.py
url_refiner/: cli.py  core.py  gui.py  main.py
web/: app.js  index.html
